Fix elements hidden under footer

--- a/css/main.scss
+++ b/css/main.scss
@@ -748,7 +748,6 @@ hr.toxip-style:after {
   .comment-form-header, .comment-section-header {
     text-align: center;
     width: 100%;
-    margin-bottom: 50px;
   }
 }
 
@@ -917,7 +916,7 @@ hr.toxip-style:after {
     margin: 0 auto;
   }
 
-  .post-comments-form {
+  .content {
     margin-bottom: 50px;
   }
   
